# intellij

./: CheckboxTree.md  config_summary.yaml
docs/: listeners.md  mcp-endpoint-extension.md
platform/analysis-impl/resources/messages/: FindBundle.properties
platform/diff-impl/src/com/intellij/diff/actions/: ThreeWayMergeSampleAction.kt
platform/lang-impl/resources/messages/: ReplaceScriptBundle.properties
platform/lang-impl/src/com/intellij/find/: EditorSearchSession.java
platform/lang-impl/src/com/intellij/find/editorHeaderActions/: ReplaceScriptAction.kt  ReplaceScriptBundle.kt  ReplaceScriptHandler.kt  plugin.xml
platform/lang-impl/testSources/com/intellij/find/editorHeaderActions/: ReplaceScriptHandlerTest.kt
platform/util/resources/misc/: registry.properties
plugins/augmented-main/: build.gradle.kts  settings.gradle.kts
plugins/branch-lights/: BUILD.bazel  plugin-content.yaml
plugins/branch-lights/src/com/yourorg/branchlights/: BranchComparator.kt  BranchConfig.kt  BranchLightsFactory.kt  BranchLightsWidget.kt  LightState.kt  LightsComponent.kt
plugins/bulk-j2k/: plugin-content.yaml
plugins/class-heatmap/: BUILD.bazel  plugin-content.yaml
plugins/class-heatmap/src/com/intellij/classHeatmap/: ClassHeatmapToolWindowFactory.kt  ReferenceCountCollector.kt
plugins/config-dsl/: build.gradle.kts  settings.gradle.kts
plugins/dependency-heatmap/: BUILD.bazel  plugin-content.yaml
plugins/dependency-heatmap/src/com/intellij/depheatmap/: ComputeCentralityAction.kt
plugins/dsl-ui-v2-features/: BUILD.bazel  plugin-content.yaml
plugins/dsl-ui-v2-features/src/com/intellij/ui/dsl/features/: ShowDslUiV2FeaturesAction.kt
plugins/embedded-browser/: BUILD.bazel  plugin-content.yaml
plugins/embedded-browser/src/com/example/embeddedbrowser/net/: IdeSchemeRegistrar.kt
plugins/embedded-browser/src/com/example/embeddedbrowser/ui/: BrowserTabsPanel.kt  BrowserToolWindowFactory.kt  ContextMenuHandler.kt  DialogAndFileHandler.kt  DownloadAndOpenHandler.kt  PermissionHandler.kt  RequestInterceptor.kt  SingleBrowserTab.kt
plugins/embedded-browser/src/com/example/embeddedbrowser/ui/actions/: OpenBrowserAction.kt
plugins/embedded-browser/src/main/kotlin/org/intellij/samples/embeddedbrowser/: EmbeddedBrowserToolWindow.kt
plugins/embedded-browser/src/org/intellij/examples/browser/: BrowserToolWindow.kt  BrowserToolWindowFactory.kt
plugins/embedded-browser/test/: BUILD.bazel
plugins/embedded-browser/test/src/org/intellij/examples/browser/: BrowserToolWindowTest.kt
plugins/ghread/: CHANGELOG.md  README.md  build.gradle.kts
plugins/ghread/src/com/yourorg/ghread/core/: GhClient.kt
plugins/ghread/src/com/yourorg/ghread/settings/: GhSettings.kt  GhSettingsConfigurable.kt
plugins/ghread/src/com/yourorg/ghread/ui/: GhAuthPanel.kt  GhCommitsPanel.kt  GhGistsPanel.kt  GhIssuesPanel.kt  GhNotificationsPanel.kt  GhPullsPanel.kt  GhRateLimitPanel.kt  GhReleasesPanel.kt  GhReposPanel.kt  GhRootPanel.kt  GhToolWindowFactory.kt
plugins/ghread/test/com/yourorg/ghread/: GhToolWindowFactoryTest.kt
plugins/ghwrite/: BUILD.bazel  plugin-content.yaml
plugins/ghwrite/src/com/yourorg/ghwrite/core/: GhClient.kt
plugins/ghwrite/src/com/yourorg/ghwrite/ui/: GhWriteRootPanel.kt  GhWriteToolWindowFactory.kt  GistCreatePanel.kt  IssueCommentPanel.kt  IssueCreatePanel.kt  IssueLabelsPanel.kt  IssueStatePanel.kt  PrCreatePanel.kt  PrMergePanel.kt  ReleaseCreatePanel.kt
plugins/ghwrite/src/com/yourorg/ghwrite/ui/actions/: OpenGhWriteToolWindowAction.kt
plugins/ghwrite/src/com/yourorg/ghwrite/ui/common/: Form.kt
plugins/git4idea/resources/: intellij.vcs.git.xml
plugins/git4idea/src/com/yourorg/paged3way/: DirtyGateService.kt  FileMaterializer.kt  GitLight.kt  PagedController.kt  PagedDialog.kt  PagedSettings.kt  PagedThreeWayAction.kt  PatchOperations.kt
plugins/ignore-string-fields/src/com/example/ignorestrings/: HideStringFieldUsagesRule.kt  IgnoredStringsSettings.kt  StringFieldCompletionContributor.kt  StringFieldFindUsagesHandlerFactory.kt  StringFieldFoldingBuilder.kt  StringFieldInspectionSuppressor.kt  StringFieldStructureFilter.kt  ToggleIgnoreStringFieldsAction.kt
plugins/java-to-kotlin-converter/src/org/jetbrains/plugins/javatokotlin/: ConvertProjectToKotlinAction.kt
plugins/main-method-augmenter/: BUILD.bazel  plugin-content.yaml
plugins/main-method-augmenter/src/com/intellij/mainmethodaugmenter/: MainMethodAugmentProvider.java
plugins/main-method-augmenter/testSrc/com/intellij/mainmethodaugmenter/: MainMethodAugmentProviderTest.java
plugins/methods/: plugin-content.yaml
plugins/methods/src/com/intellij/methods/: MethodsFileRegistry.java  MethodsScopeProvider.java  MethodsUrlService.java  MethodsVfsInitializer.java  MethodsVirtualFile.java  MethodsVirtualFileSystem.java
plugins/methods/src/com/intellij/methods/editor/: MethodsEditorProvider.java  (+1 more)
plugins/methods/testSrc/com/intellij/methods/: MethodsScopeTest.kt
plugins/methodsfs/: BUILD.bazel  build.gradle.kts  plugin-content.yaml  settings.gradle.kts
plugins/methodsfs/src/com/yourorg/methodsfs/action/: OpenMethodsForCurrentFileAction.kt
plugins/methodsfs/src/com/yourorg/methodsfs/actions/: OpenMethodsForFileAction.kt
plugins/methodsfs/src/com/yourorg/methodsfs/editor/: MethodCellRenderer.kt  MethodsEditorProvider.kt  MethodsPanel.kt
plugins/methodsfs/src/com/yourorg/methodsfs/index/: MethodsIndexAccess.kt
plugins/methodsfs/src/com/yourorg/methodsfs/scope/: MethodsScopeProvider.kt
plugins/methodsfs/src/com/yourorg/methodsfs/vfs/: MethodsUrlService.kt  MethodsVfsRegistrar.kt  MethodsVirtualFile.kt  MethodsVirtualFileSystem.kt
plugins/paged3way/: build.gradle.kts  settings.gradle.kts
plugins/paged3way/src/com/yourorg/paged3way/: DirtyGateService.kt  FileMaterializer.kt  GitLight.kt  PagedController.kt  PagedDialog.kt  PagedSettings.kt  PagedThreeWayAction.kt
plugins/zenec-java/: BUILD.bazel  plugin-content.yaml
plugins/zenec-java/src/main/kotlin/com/yourorg/zenecjava/: JsonWatcher.kt  ZenecJavaEditor.kt  ZenecJavaViewProvider.kt  ZenecToJavaRenderer.kt
(+56 files in other folders)
