load("@rules_jvm//:jvm.bzl", "jvm_library", "jvm_resources")

jvm_resources(
  name = "vcs-git-branchLights_resources",
  files = glob(["resources/**/*"]),
  strip_prefix = "resources"
)

jvm_library(
  name = "vcs-git-branchLights",
  module_name = "intellij.vcs.git.branchLights",
  visibility = ["//visibility:public"],
  srcs = glob(["src/**/*.kt", "src/**/*.java", "src/**/*.form"], allow_empty = True),
  deps = [
    "@lib//:kotlin-stdlib",
    "//platform/core-api:core",
    "//platform/core-ui",
    "//platform/platform-impl:ide-impl",
    "//platform/editor-ui-api:editor-ui",
    "//platform/projectModel-api:projectModel",
    "//platform/diff-impl",
    "//platform/vcs-impl",
    "//platform/vcs-api:vcs",
    "//plugins/git4idea:vcs-git",
    "//plugins/git4idea/shared",
    "//platform/dvcs-impl/shared",
    "//platform/vcs-impl/shared",
  ],
  runtime_deps = [":vcs-git-branchLights_resources"]
)
