load("//build:compiler-options.bzl", "create_kotlinc_options")
load("@rules_jvm//:jvm.bzl", "jvm_library", "jvm_resources")

create_kotlinc_options(
  name = "custom_dependency_heatmap",
  x_explicit_api_mode = "strict",
)

jvm_resources(
  name = "dependency_heatmap_resources",
  files = glob(["resources/**/*"]),
  strip_prefix = "resources",
)

jvm_library(
  name = "dependency_heatmap",
  module_name = "intellij.dependency.heatmap",
  visibility = ["//visibility:public"],
  srcs = glob(["src/**/*.kt", "src/**/*.java", "src/**/*.form"], allow_empty = True),
  kotlinc_opts = ":custom_dependency_heatmap",
  deps = [
    "//platform/util",
    "//platform/platform-api:ide",
    "//platform/platform-impl:ide-impl",
    "//platform/lang-api:lang",
    "//platform/lang-impl",
    "//java/java-psi-api:psi",
    "//java/openapi:java",
  ],
  runtime_deps = [":dependency_heatmap_resources"],
)
