load("@rules_jvm//:jvm.bzl", "jvm_library", "jvm_resources")

jvm_resources(
  name = "embedded_browser_resources",
  files = glob(["resources/**/*"]),
  strip_prefix = "resources",
)

jvm_library(
  name = "embedded_browser",
  module_name = "intellij.embedded.browser",
  visibility = ["//visibility:public"],
  srcs = glob(["src/**/*.kt", "src/**/*.java", "src/**/*.form"], allow_empty = True),
  deps = [
    "//platform/core-api:core",
    "//platform/lang-api:lang",
    "//platform/platform-impl:ide-impl",
    "//platform/ui.jcef",
    "//platform/util:util-ui",
    "@lib//:jcef",
    "@lib//:kotlin-stdlib",
  ],
  runtime_deps = [":embedded_browser_resources"],
)
