load("//build:compiler-options.bzl", "create_kotlinc_options")
load("@rules_jvm//:jvm.bzl", "jvm_library", "jvm_resources")

create_kotlinc_options(
  name = "custom_embedded_browser",
  x_explicit_api_mode = "strict",
)

jvm_resources(
  name = "embedded_browser_resources",
  files = glob(["resources/**/*"]),
  strip_prefix = "resources",
)

jvm_library(
  name = "embedded-browser",
  module_name = "intellij.embedded.browser",
  visibility = ["//visibility:public"],
  srcs = glob(["src/**/*.kt", "src/**/*.java", "src/**/*.form"], allow_empty = True),
  kotlinc_opts = ":custom_embedded_browser",
  deps = [
    "//platform/core-api:core",
    "//platform/util",
    "//platform/editor-ui-api:editor-ui",
    "//platform/platform-api:ide",
    "//platform/platform-impl:ide-impl",
    "//platform/vcs-api:vcs-api",
  ],
  runtime_deps = [":embedded_browser_resources"],
)
