load("@rules_jvm//:jvm.bzl", "jvm_library", "jvm_resources")

jvm_resources(
  name = "methodsfs_resources",
  files = glob(["resources/**/*"]),
  strip_prefix = "resources",
)

jvm_library(
  name = "methodsfs",
  module_name = "intellij.methodsfs",
  visibility = ["//visibility:public"],
  srcs = glob(["src/**/*.kt", "src/**/*.java", "src/**/*.form"], allow_empty = True),
  deps = [
    "//java/java-impl:impl",
    "//platform/diff-api:diff",
    "//platform/diff-impl",
    "//platform/editor-ui-api:editor-ui",
    "//platform/platform-impl:ide-impl",
    "//platform/core-ui",
    "//platform/lang-core",
    "//platform/projectModel-api:projectModel",
    "//platform/util/jdom",
    "//platform/core-api:core",
    "//plugins/git4idea",
  ],
  runtime_deps = [":methodsfs_resources"],
)
