load("@rules_jvm//:jvm.bzl", "jvm_library", "jvm_resources")

jvm_resources(
  name = "zenec_java_resources",
  files = glob(["resources/**/*"]),
  strip_prefix = "resources",
)

jvm_library(
  name = "zenec_java",
  module_name = "intellij.zenecjava",
  visibility = ["//visibility:public"],
  srcs = glob(["src/main/kotlin/**/*.kt"], allow_empty = True),
  deps = [
    "//platform/analysis-api:analysis",
    "//platform/core-api:core",
    "//platform/editor-ui-api:editor-ui",
    "//platform/lang-core",
    "//platform/indexing-api:indexing",
    "//platform/projectModel-api:projectModel",
    "//platform/util",
    "//platform/platform-impl:ide-impl",
    "//platform/analysis-impl",
    "//platform/lang-impl",
    "//json:json",
    "//java/java-psi-api:psi",
  ],
  runtime_deps = [":zenec_java_resources"],
)
